# vteffect

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE  canoe.cpp  coord.h  figlet.cpp  goto.cpp  goto.h  main.cpp  maze.cpp  readme.md  screen.h  vt100.h  vt52.cpp
.github/workflows/: cmake.yml
scat/: CMakeLists.txt  port.h.in  scat.c
stdout_control/: CMakeLists.txt  stdout_control.cpp  stdout_control.h
vtasm/: CMakeLists.txt  main.cpp  vtasm.cpp  vtasm.h
vtdump/: CMakeLists.txt  Makefile  main.cpp  vtdump.cpp  vtdump.h
vteffect/: CMakeLists.txt  Makefile  chargen.cpp  effect.cpp  effect.h  lptest.cpp  main.cpp  maze.cpp  options.cpp  screen.cpp  wipe.cpp
